# origin-os-protocol

./: .gitignore  AGENTS.md  Anchor.toml  BASELINE.md  BUILD.md  Cargo.toml  DEVNET_ACTION_PLAN.md  DEVNET_DECISION_MATRIX.md  DEVNET_READINESS.md  DEVNET_SUMMARY.md  README.md  package.json  rust-toolchain.toml  tsconfig.json
.github/: copilot-instructions.md
.github/instructions/: ci.instructions.md  rust.instructions.md
.github/workflows/: anchor.yml  ci.yml  rust.yml
docs/: CI.md  README.md  apps-and-lam.md  architecture.md  deployment.md  index.md  read.me  token-economics.md
programs/collateral_vault/: Cargo.toml
programs/collateral_vault/src/: lib.rs
programs/gateway/: Cargo.toml
programs/gateway/src/: lib.rs
programs/mode_registry/: Cargo.toml
programs/mode_registry/src/: lib.rs
programs/naked_staking/: Cargo.toml
programs/naked_staking/src/: lib.rs
programs/pyth_helpers/: Cargo.toml
programs/pyth_helpers/src/: lib.rs
programs/session_escrow/: Cargo.toml
programs/session_escrow/src/: lib.rs
programs/staking_rewards/: Cargo.toml
programs/staking_rewards/src/: lib.rs
tests/: protocol.ts
