[workspace]
members = [
    "programs/mode_registry",
    "programs/collateral_vault",
    "programs/session_escrow",
    "programs/staking_rewards",
    "programs/gateway",
    "programs/pyth_helpers",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
constant_time_eq = { path = "vendor/constant_time_eq" }
blake3 = { path = "vendor/blake3" }
toml_edit = { path = "vendor/toml_edit" }
indexmap = { path = "vendor/indexmap" }
