[package]
name = "collateral_vault"
version = "0.1.0"
description = "Immutable money core for provider collateral custody"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "collateral_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
mpl-token-metadata = "4.1.2"
