[package]
name = "gateway"
version = "0.1.0"
description = "Swap gateway for Origin OS - bridges external DEXs to session/collateral flows"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gateway"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
pyth_helpers = { path = "../pyth_helpers" }
pyth-solana-receiver-sdk = "0.4.0"
session_escrow = { path = "../session_escrow", features = ["cpi"] }
collateral_vault = { path = "../collateral_vault", features = ["cpi"] }
