[package]
name = "mode_registry"
version = "0.1.0"
description = "Allowlist for collateral/payment mints and per-mint parameters"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mode_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
