[package]
name = "session_escrow"
version = "0.1.0"
description = "Immutable money core for user escrow, insurance, and claims"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "session_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
collateral_vault = { path = "../collateral_vault", features = ["cpi"] }
